--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     
     <title>Google Maps Travel Advisor</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyAWJ521TpoaxGRpTcqSaBLvxRWsRb1Xhk0"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=<key>"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
